--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
 #spring.thymeleaf.servlet.content-type=text/html
 #spring.thymeleaf.mode=HTML
-spring.resources.static-locations=classpath:/static,classpath:/templates
+#spring.resources.static-locations=classpath:/static,classpath:/templates
 
